test/invalid/baseline/union-zero.txt
Syntax error at line 1 in union-zero.webidl:
typedef () UnionZero;
         ^ No type after open parenthesis or 'or' in union type
